Massive performance improvements (Cables, Pipes, Machines)